--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -161,6 +161,9 @@ h2, p{
         font-size: 25px;
         color: black;
     }
+    .nav-mobile a:hover {
+        background-color: darkgray;
+    }
     .nav-mobile .active {
         /* en type styling her ?*/
         background-color: gray;
