--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -123,15 +123,61 @@ h2, p{
 }
 
 /* Prototype */
-.prototype-text {
-    width: 45%;
-    margin: 8px;
+.contentPrototype{
+    width:90%;
+    flex-direction: column;
+    margin:auto;
+    justify-content: center;
+    align-items: center;
 }
 
-.prototype-img {
-    margin-top: 40px;;
-    max-width: 250px;
-    max-height: 4000px;
+.prototypeHeader{
+    background-color:white;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.prototypeHeader h1{
+    font-size: 2em;
+    text-align:center;
+    margin: 20px 40px;
+}
+
+.prototypeHeader p{
+    font-size: 1.5em;
+    text-align:center;
+    line-height: 1.5em;
+    margin: 30px auto;
+    width:60%;
+}
+
+.prototypeHeader img{
+    width:200px;
+    float:left;
+    margin-top:-50px;
+}
+
+.prototypeContent{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.prototype1{
+    background-color:white;
+    flex-basis:70%;
+    margin: 50px auto;
+}
+
+.prototype1 img{
+    width:300px;
+    float:left;
+    margin-right:10%;
+}
+
+.prototype1 p{
+    line-height: 30px;
+    font-size: 20px;
 }
 
 /* Sources */
