--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -132,14 +132,13 @@ h2, p{
 }
 
 .prototypeHeader{
-    background-color:white;
     border: 2px solid black;
     border-radius: 10px;
     margin-top: 20px;
 }
 
 .prototypeHeader h1{
-    font-size: 2em;
+    font-size: 2.5em;
     text-align:center;
     margin: 20px 40px;
 }
@@ -164,8 +163,7 @@ h2, p{
 }
 
 .prototype1{
-    background-color:white;
-    flex-basis:70%;
+    width:70%;
     margin: 50px auto;
 }
 
