--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -51,7 +51,7 @@ section {
     margin: 8px 0;
     width: 100%;
 }
-h2 {
+h1, h2 {
     font-weight: 700;
 }
 p {
@@ -115,10 +115,18 @@ h2, p{
 
 
 /* Solution */
+/* .solution-padding {
+padding-left: 5%; padding-right: 5%;
+} */
+.solution-header {
+    text-align: center;
+    margin: 32px;
+    font-size: 2em;
+}
 .solution-text {
     width: 35%;
     margin: 8px;
-    padding: 4px;
+    padding: 24px;
     border: 2px grey solid;
 }
 .solution-img {
