--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -128,9 +128,11 @@ h2, p{
     width: 90%;
 } 
 .solution-header {
-    text-align: center;
-    margin: 32px;
+    width: 100%;
+    max-height: 400px;
+
 }
+
 .solution-text {
     width: 35%;
     margin: 8px;
