--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -112,13 +112,11 @@ h2, p{
     font-weight: bold;
 }
 .problem-person {
-    width: 30%;
     text-align: center;
+    width: 35%;
     margin: 8px;
-    padding: 8px;
-    border-radius: 4px 4px;
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.2);
+    padding: 24px;
+    border: 4px grey solid;
 }
 .problem-person img {
     width: 100%;
@@ -157,7 +155,7 @@ h2, p{
     width: 35%;
     margin: 8px;
     padding: 24px;
-    border: 2px grey solid;
+    border: 4px grey solid;
 }
 .solution-img {
     padding-left: 25%;
@@ -170,10 +168,13 @@ h2, p{
 .prototype-header {
     text-align: center;
     padding: 12px;
-    border: 2px solid black;
+    border: 4px solid black;
     border-radius: 10px;
     margin-top: 20px;
     
+}
+.prototype-section {
+    margin: 32px 0;
 }
 .prototype-header h2 {
     font-size: 2em;
@@ -184,6 +185,9 @@ h2, p{
 }
 .prototype-img {
     max-height: 400px;
+    /* offset-x | offset-y | blur-radius | Spread radius| color */
+    box-shadow: 0px 0px 24px 4px rgba(0, 0, 0, 0.1);
+    
 }
 
 /* Sources */
