--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -34,7 +34,7 @@ h2 {
 .nav-desktop a {
     text-decoration: none;
     font-size: 25px;
-    padding: 25px 16px;
+    padding: 23px 16px;
     color: black;
 }
 
@@ -144,13 +144,13 @@ h2, p{
     padding-right: 5%;
     width: 90%;
 } 
-.solution-header {
+/* .solution-header {
     width: 100%;
     height: 75%;
-}
+} */
 .solution-header-section{
     margin: 0px;
-    background-image: url("../../imgs/general-header-gradient-2.png");
+    background-image: url("../../imgs/general-header-gradient.png");
     background-repeat: no-repeat;
     background-size: contain;
     height: 40vw;
@@ -168,7 +168,7 @@ h2, p{
     padding-left: 25%;
     padding-right: 25%;
     max-width: 50%;
-    height: auto;
+    max-height: 350px;
 }
 
 /* Prototype */
