oppdatert farge home a tag

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -90,7 +90,7 @@ h2, p{
     display: inline-block;
     margin: 8px;
     padding: 8px;
-    border: solid gray 4px;
+    border: solid #a5603f 4px;
     border-radius: 8px;
     text-decoration: none;
     color: white;
