--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap");
 /* Kan fjerne denne om folk ikke liker den? */
 /* Css reset */
 * {
@@ -56,13 +56,15 @@ section {
     margin: 8px 0;
     width: 100%;
 }
-h1, h2 {
+h1,
+h2 {
     font-weight: 400;
 }
 p {
     font-weight: 300;
 }
-h2, p{
+h2,
+p {
     margin-bottom: 0.5em;
     line-height: 1.5em;
 }
@@ -143,25 +145,24 @@ h2, p{
     max-width: 250px;
 }
 
-
 /* Solution */
 .solution-padding {
-    padding-left: 5%;  
+    padding-left: 5%;
     padding-right: 5%;
     width: 90%;
-} 
+}
 /* .solution-header {
     width: 100%;
     height: 75%;
 } */
-.solution-header-section{
+.solution-header-section {
     margin: 0px;
     background-image: url("../../imgs/general-header-gradient.png");
     background-repeat: no-repeat;
     background-size: contain;
     height: 40vw;
     max-width: 100%;
-    background-color: white;  
+    background-color: white;
     margin-bottom: -7.5%;
 }
 .solution-text {
@@ -182,9 +183,8 @@ h2, p{
     text-align: center;
     padding: 12px;
     border: 1px solid black;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     margin-top: 20px;
-    
 }
 .prototype-section {
     margin: 32px 0;
@@ -214,7 +214,6 @@ h2, p{
 @media only screen and (max-width: 750px) {
     .nav-desktop {
         display: none;
-        
     }
     .nav-mobile {
         display: flex;
@@ -235,7 +234,7 @@ h2, p{
         text-decoration: none;
         font-size: 25px;
         color: black;
-        width:100%;
+        width: 100%;
     }
     .nav-mobile li:hover {
         background-color: darkgray;
@@ -261,20 +260,18 @@ h2, p{
         margin: 20px; */
         /* Må gjøres responsive */
     }
-    
+
     .solution-img {
-    padding-left: 5%;
-    padding-right: 5%;
-    max-width: 90%;
+        padding-left: 5%;
+        padding-right: 5%;
+        max-width: 90%;
     }
     .solution-header {
         width: 100%;
         max-height: 300px;
         height: 125%;
     }
-    .solution-header-image{
+    .solution-header-image {
         margin-bottom: 10%;
     }
-
 }
-
